- Adds support for deleting list items - Adds support for filtering list items - Adds support for deleting all list items - Adds animations in preparation for localstorage

--- a/style.css
+++ b/style.css
@@ -124,3 +124,29 @@ header h1 {
     width: 100%;
   }
 }
+
+/* Class helpers */
+.hideDisplay {
+  display: none !important;
+}
+
+.hideOpacity {
+  opacity: 0;
+}
+
+.showOpacity {
+  opacity: 1;
+  animation-name: fadeInOpacity;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+  animation-duration: 1s;
+}
+
+@keyframes fadeInOpacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
